# zettl

./: .cursorignore  .gitignore  README.md  Taskfile.yml  go.mod  go.sum  go.work  go.work.sum  justfile  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  service.go  tsconfig.json  zettl.code-workspace
.cursor/rules/: default.mdc
.github/instructions/: default.instructions.md
.task/checksum/: build-frontend--PRODUCTION--  common-install-frontend-deps  darwin-common-install-frontend-deps  generate-bindings--BUILD_FLAGS--buildvcs-false--gcflags-all---l--  (+2 more)
app/: package.json
backend/: Cargo.toml  tauri.conf.json
cmd/: chroma_inner.html  chroma_output.html  extract_inner_html.go  generate_chroma_html.go
cmd/db/: main.go  (+1 more)
core/: .gitignore  Cargo.toml  a.css  tauri.conf.json
core/capabilities/: default.json
core/icons/: icon.icns
core/src/: app.rs  clipboard.rs  db.rs  detection.rs  event.rs  handler.rs  highlight.rs  lookup.rs  main.rs  model.onnx  pasteboard.rs  profile.rs  schema.rs  session.rs  settings.rs  shortcuts.rs  snippet.rs  syntax.rs  theme.rs  user.rs  window.rs
core/src/data/: default.themedump
core/src/detection/: config.rs  content_type.rs  features.rs  format.rs
frontend/: .prettierrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  tailwind.config.js  tsconfig.json  vite.config.ts
inference/: package.json  tsconfig.json  tsconfig.tsbuildinfo
pkg/: config.go  darwin.go  db.go  highlight.go  hotkey.go  migrations.go  os.go  panel.go  screen.go  settings.go  snippet.go
scripts/: build.sh
web/: .prettierrc.json  components.json  package.json  popover.html  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
(+55 files in other folders)
