[package]
edition = "2021"
name = "zettl-core"
version = "0.1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
objc2 = "0.5.2"
syntect = "5.2.0"
tauri = { version = "2", features = [] }
tauri-plugin-sql = "2.0.3"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
