[package]
edition = "2021"
name = "zettl-core"
version = "0.1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
objc2 = "0.5.2"
objc2-app-kit = "0.2.2"
syntect = "5.2.0"
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-sql = { version = "2.0.3", features = ["sqlite"] }
ort = "2.0.0-rc.9"
sqlx = "0.8.2"
tokio = "1.42.0"
objc2-foundation = "0.2.2"
ndarray = "0.16.1"
serde = "1.0.216"
serde_json = "1.0.133"
tauri-plugin-positioner = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2.0"

[profile.dev]
incremental = true
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
